--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,13 +13,14 @@ nav .navbar {
   left: 0;
   width: 300px;
   height: 100%;
-  padding: 20px 10px;
+  overflow: hidden;
+  padding: 80px 10px;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  box-shadow: 5px -2px 10px #555;
+  box-shadow: 2px -2px 5px #666;
   transition: all ease-in-out 0.5s;
 }
 nav .navbar ul {
@@ -27,6 +28,17 @@ nav .navbar ul {
 }
 nav .navbar ul li {
   position: relative;
+  list-style: none;
+  margin-bottom: 20px;
+}
+nav .navbar ul li a {
+  color: #666;
+  font-size: larger;
+  text-decoration: none;
+  padding: 0px 10px;
+}
+nav .navbar ul li a:hover {
+  border-bottom: 3px solid #666;
 }
 nav .button-bars {
   position: relative;
@@ -86,7 +98,11 @@ nav .button-bars .icon {
 #content ul {
   padding: unset;
 }
-#content ul li {
+#content ul a {
+  color: white;
+  text-decoration: none;
+}
+#content ul a li {
   list-style: none;
   width: 700px;
   height: fit-content;
@@ -100,19 +116,14 @@ nav .button-bars .icon {
   border-radius: 4px;
   cursor: pointer;
   transition: all ease-in-out 0.1s;
-}
-#content ul li a {
-  text-decoration: none;
-  color: white;
-  transition: all ease-in-out 0.1s;
   word-wrap: break-word;
 }
-#content ul li:hover {
+#content ul a:hover {
+  color: #00c6ff;
+}
+#content ul a:hover li {
   background-color: white;
   border-color: white;
-}
-#content ul li:hover a {
-  color: #00c6ff;
 }
 
 @media screen and (max-width: 768px) {
