--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -12,18 +12,30 @@ nav {
         left: 0;
         width: 300px;
         height: 100%;
-        padding: 20px 10px;
+        overflow: hidden;
+        padding: 80px 10px;
         background-color: white;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        box-shadow: 5px -2px 10px #555;
+        box-shadow: 2px -2px 5px #666;
         transition: all ease-in-out 0.5s;
         ul {
             position: relative;
             li {
                 position: relative;
+                list-style: none;
+                margin-bottom: 20px;
+                a {
+                    color: #666;
+                    font-size: larger;
+                    text-decoration: none;
+                    padding: 0px 10px;
+                }
+                a:hover{
+                    border-bottom: 3px solid #666;
+                }
             }
         }
     }
@@ -89,32 +101,31 @@ nav {
     }
     ul {
         padding: unset;
-        li {
-            list-style: none;
-            width: 700px;
-            height: fit-content;
-            font-size: medium;
-            font-weight: 400;
-            text-align: center;
-            vertical-align: bottom;
-            padding: 13px 30px;
-            margin: 13px 0;
-            border: 3px solid white;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: all ease-in-out 0.1s;
-            a {
-                text-decoration: none;
-                color: white;
+        a{
+            color: white;
+            text-decoration: none;
+            li {
+                list-style: none;
+                width: 700px;
+                height: fit-content;
+                font-size: medium;
+                font-weight: 400;
+                text-align: center;
+                vertical-align: bottom;
+                padding: 13px 30px;
+                margin: 13px 0;
+                border: 3px solid white;
+                border-radius: 4px;
+                cursor: pointer;
                 transition: all ease-in-out 0.1s;
                 word-wrap: break-word;
             }
         }
-        li:hover {
-            background-color: white;
-            border-color: white;
-            a {
-                color: #00c6ff;
+        a:hover {
+            color: #00c6ff;
+            li {
+                background-color: white;
+                border-color: white;
             }
         }
     }
